CSS Fix for the card container being too big during card select

--- a/css/LookAtCards.css
+++ b/css/LookAtCards.css
@@ -35,5 +35,5 @@
 	align-content: center;
 	justify-content: center;
 	align-items: center;
-	height: calc(100% - 4em);
+	height: calc(100% - 6em);
 }
